/////////////////////////////////////////////////////////////
// Generated by the VisualData modelbuilder.  DO NOT EDIT!
/////////////////////////////////////////////////////////////
syntax = "proto3";
package Dynamic.Data;

import "openngs.character.common.proto";
import "openngs.setting.common.proto";

//道具存档数据
//Data\Entities\Dynamic.xlsx
message ItemSaveData{
	uint32 GUID = 1;  //唯一ID
	uint32 ItemID = 2;  //道具ID
	uint32 Durability = 3;  //道具耐久
	uint32 Count = 4;  //道具数量
	uint32 Quality = 5;  //道具品质
}

//排行榜存档数据
//Data\Entities\Dynamic.xlsx
message RankSaveData{
	uint32 Index = 1;  //排名
	OpenNGS.Character.Common.CharacterInfo Character = 2;  //角色信息
	uint32 ClearTime = 3;  //通关时间
}

//科技树存档数据
//Data\Entities\Dynamic.xlsx
message TechNodeSaveData{
	uint32 ID = 1;  //技能ID
	uint32 Level = 2;  //技能等级
	bool Locked = 3;  //是否解锁
	bool Activated = 4;  //是否激活
}

//对话存档数据
//Data\Entities\Dynamic.xlsx
message DialogSaveData{
	uint32 DialogID = 1;  //对话ID
}

//垂直同步存档数据
//Data\Entities\Dynamic.xlsx
message VerticalSynchronizationData{
	string FramesName = 1;  //垂直同步
	bool state = 2;  //状态
}

//音频设置存档数据
//Data\Entities\Dynamic.xlsx
message AudioSettinData{
	string AduioName = 1;  //音频类型
	uint32 Value = 2;  //数值
	bool Switch = 3;  //开关
}

//键值设置存档数据
//Data\Entities\Dynamic.xlsx
message KeyControlSettingData{
	string KeyName = 1;  //按键类型
	string Key = 2;  //键值
}

//语言设置存档数据
//Data\Entities\Dynamic.xlsx
message LanguageData{
	string languageName = 1;  //语言
	bool Default = 2;  //状态
}

//分辨率设置存档数据
//Data\Entities\Dynamic.xlsx
message ResolutionRatiosData{
	string ResName = 1;  //分辨率
	OpenNGS.Setting.Common.RESOLUTIONRATION_TYPE ResType = 2;  //分辨率值
}
